--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@300&display=swap');
+
+html, body {
+  font-family: 'Sora', sans-serif !important;
+}
+
+#app {
+  font-family: 'Sora', sans-serif !important;
+}
+
 /*!
 * Start Bootstrap - Landing Page v6.0.4 (https://startbootstrap.com/theme/landing-page)
 * Copyright 2013-2021 Start Bootstrap
